--- a/template.Rmd
+++ b/template.Rmd
@@ -377,7 +377,16 @@ Panel content
 
 ```r
 ## defining a website compatible palette
-dc_pal <- list(green=
-    red=
-    palered=)
+dc_pal_flatly <- c(
+    red="#c7254e",
+    palered="#f9f2f4",
+    grey="#ecf0f1",
+    primary="#2c3e50",
+    success="#18bc9c",
+    info="#3498db",
+    warning="#f39c12",
+    danger="#e74c3c")
+barplot(1:length(dc_pal_flatly), col=dc_pal_flatly)
 ```
+![]({{ site.url }}/images/dc_pal_flatly.png)
+
