--- a/template.Rmd
+++ b/template.Rmd
@@ -380,13 +380,21 @@ Panel content
 dc_pal_flatly <- c(
     red="#c7254e",
     palered="#f9f2f4",
-    grey="#ecf0f1",
     primary="#2c3e50",
     success="#18bc9c",
     info="#3498db",
     warning="#f39c12",
-    danger="#e74c3c")
-barplot(1:length(dc_pal_flatly), col=dc_pal_flatly)
+    danger="#e74c3c",
+    pre_col="#7b8a8b",
+    pre_bg="#ecf0f1",
+    pre_border= "#cccccc"
+)
+par(las=2, mar=c(6,5,2,2))
+barplot(1:length(dc_pal_flatly), 
+    names=names(dc_pal_flatly), 
+    border=dc_pal_flatly["pre_border"],
+    col=dc_pal_flatly)
 ```
 ![]({{ site.url }}/images/dc_pal_flatly.png)
+
 
