--- a/index.Rmd
+++ b/index.Rmd
@@ -24,18 +24,18 @@ Markov-chain Monte Carlo (MCMC) methods.</p>
 
 <div class="col-lg-4 col-sm-6">
 <h3><i class="fa fa-laptop"></i> Easy to Install</h3>
-<p>The <a href="{{ site.baseurl }}/dclone">dclone</a> <a href="http://www.r-project.org">R</a> package and its extensions
-work with all major MCMC engines: <a href="http://mcmc-jags.sourceforge.net/">JAGS</a>, <a href="http://www.mrc-bsu.cam.ac.uk/software/bugs/the-bugs-project-winbugs/">WinBUGS</a>, <a href="http://www.openbugs.net/">OpenBUGS</a>, <a href="http://mc-stan.org/">Stan</a>. See the <a href="{{ site.baseurl }}/install.html">installation guide</a>.</p>
+<p>The <a href="{{ site.baseurl }}/dclone">dclone</a> <a href="http://www.r-project.org">R</a> package 
+works with all major MCMC engines. See the <a href="{{ site.baseurl }}/install.html">installation guide</a>.</p>
 </div>
 
 <div class="col-lg-4 col-sm-6">
 <h3><i class="fa fa-code"></i> Open Source</h3>
-<p>The <a href="{{ site.baseurl }}/dclone">dclone</a> package is released under the <a href="http://www.gnu.org/licenses/licenses.en.html">GNU General Public License</a>, stable version on <a href="http://cran.r-project.org/package=dclone">CRAN</a>, development on <a href="https://github.com/datacloning/dclone">GitHub</a>.</p>
+<p>R packages released under <a href="http://www.gnu.org/licenses/licenses.en.html">public licenses</a>, stable version on <a href="http://cran.r-project.org/package=dclone">CRAN</a>, development on <a href="https://github.com/datacloning/dclone">GitHub</a>.</p>
 </div>
 
 <div class="col-lg-4 col-sm-6">
 <h3><i class="fa fa-flash"></i> High Performance</h3>
-<p>Built with support for <a href="{{ site.baseurl }}/usage.html#high-performance-computing">parallel computations</a> using multicore/cluster/grid architectures and forking.</p>
+<p>Built with support for <a href="{{ site.baseurl }}/usage.html#high-performance-computing">parallel computations</a> using clusters or forking.</p>
 </div>
 
 <div class="col-lg-4 col-sm-6">
