--- a/template.Rmd
+++ b/template.Rmd
@@ -60,6 +60,7 @@ This is [an example][id] reference-style link.
 [id]: http://example.com/  "Optional Title Here"
 
 This is some text.[^1]. Other text.[^footnote].
+This is some text.[^other-note]. Other text.[^codeblock-note].
 
 [^1]: Some *crazy* footnote definition.
 
