--- a/tutorials/index.Rmd
+++ b/tutorials/index.Rmd
@@ -6,8 +6,9 @@ layout: default
 
 ## R code from S&oacute;lymos 2010
 
-<p><a class="btn btn-success" href="{{ site.baseurl }}/tutorials/">Take me there</a></p>
+<p><a class="btn btn-success" href="{{ site.baseurl }}/tutorials/RJournal_2010-2_Solymos.Rmd">Take me there</a></p>
 
+{% comment %}
 ## Implementing GLM with data cloning
 
 <p><a class="btn btn-success" href="{{ site.baseurl }}/tutorials/">Take me there</a></p>
@@ -19,4 +20,5 @@ layout: default
 ## A short data cloning tutorial
 
 <p><a class="btn btn-success" href="{{ site.baseurl }}/tutorials/">Take me there</a></p>
+{% endcomment %}
 
