--- a/tutorials/index.Rmd
+++ b/tutorials/index.Rmd
@@ -6,7 +6,7 @@ layout: default
 
 ## R code from S&oacute;lymos 2010
 
-<p><a class="btn btn-success" href="{{ site.baseurl }}/tutorials/RJournal_2010-2_Solymos.Rmd">Take me there</a></p>
+<p><a class="btn btn-success" href="{{ site.baseurl }}/tutorials/RJournal_2010-2_Solymos.html">Take me there</a></p>
 
 {% comment %}
 ## Implementing GLM with data cloning
