--- a/courses/2015/montpellier/index.Rmd
+++ b/courses/2015/montpellier/index.Rmd
@@ -3,12 +3,13 @@ title: 'Hierarchical models for conservation biologists made easy'
 layout: default
 ---
 
-One-day teaching workshop at [ICCB/ECCB congress](http://www.iccb-eccb2015.org/content/pre-congress-training-workshops) in Monpellier, France, on August 1st
+
+### One-day teaching workshop at [ICCB/ECCB congress](http://www.iccb-eccb2015.org/content/pre-congress-training-workshops) in Monpellier, France, on August 1st
+
+![Montpellier course image](http://peter.solymos.org/img/thumbnails/dc-montpellier-2015.png)
 
 This training course is aimed towards the conservation professionals who need to understand and feel comfortable with modern statistical and computational tools used to address pressing conservation issues. By presenting both Bayesian and Likelihood based approaches, the participants will be able to go beyond the rhetorics of philosophy of statistics and use the tools with full understanding of their assumptions and implications.
 
-## [About the course]({{ site.baseurl }}/courses/2015/montpellier/about-the-course.html)
-
-## [What to do before the course]({{ site.baseurl }}/courses/2015/montpellier/how-to-prepare.html)
-
+* [About the course]({{ site.baseurl }}/courses/2015/montpellier/about-the-course.html)
+* [What to do before the course]({{ site.baseurl }}/courses/2015/montpellier/how-to-prepare.html)
 
