--- a/courses/2015/montpellier/how-to-prepare.Rmd
+++ b/courses/2015/montpellier/how-to-prepare.Rmd
@@ -12,7 +12,7 @@ the most up-to-date base R version suitable for your operating system (the lates
 ### Install RStudio
 
 Having RStudio is not absolutely necessary, but our course material
-will follow a syntax that is close to RStudio's R markdown
+will follow a syntax that is close to RStudio's [R markdown](http://rmarkdown.rstudio.com/)
 notation, so having RStudio will make our life easier. RStudio is also available for different operating systems. Pick the open source descktop edition from [here](http://www.rstudio.com/products/rstudio/download/) (the latest RStudio Desktop version at the time of writing these instructions is 0.99.447).
 
 ### Install JAGS
