--- a/courses/2015/montpellier/apps.Rmd
+++ b/courses/2015/montpellier/apps.Rmd
@@ -6,7 +6,9 @@ subtitle: 'Apps'
 
 ### Simple MLE example
 
+<div class="embed-responsive embed-responsive-4by3">
 <iframe id="frame" name="app" src="https://psolymos.shinyapps.io/app01"></iframe>
+</div>
 
 ### Simple Bayesian model
 
