--- a/courses/2015/montpellier/apps.Rmd
+++ b/courses/2015/montpellier/apps.Rmd
@@ -6,7 +6,7 @@ subtitle: 'Apps'
 
 ### Simple MLE example
 
-<div class="embed-responsive">
+<div class="embed-responsive iframe">
 <iframe id="frame" name="app" src="https://psolymos.shinyapps.io/app01"></iframe>
 </div>
 
