--- a/template.Rmd
+++ b/template.Rmd
@@ -384,23 +384,32 @@ Panel content
 
 ```r
 ## defining a website compatible palette
-dc_pal_flatly <- c(
-    red="#c7254e",
-    palered="#f9f2f4",
-    primary="#2c3e50",
-    success="#18bc9c",
-    info="#3498db",
-    warning="#f39c12",
-    danger="#e74c3c",
-    pre_col="#7b8a8b",
-    pre_bg="#ecf0f1",
-    pre_border= "#cccccc"
+dcpal_flatly <- list(
+    "red"="#c7254e",
+    "palered"="#f9f2f4",
+    "primary"="#2c3e50",
+    "success"="#18bc9c",
+    "info"="#3498db",
+    "warning"="#f39c12",
+    "danger"="#e74c3c",
+    "pre_col"="#7b8a8b",
+    "pre_bg"="#ecf0f1",
+    "pre_border"= "#cccccc"
 )
-par(las=2, mar=c(6,5,2,2))
-barplot(1:length(dc_pal_flatly), 
-    names=names(dc_pal_flatly), 
-    border=dc_pal_flatly["pre_border"],
-    col=dc_pal_flatly)
+dcpal_reds <- colorRampPalette(c("#f9f2f4", "#c7254e"))
+dcpal_ogrd <- colorRampPalette(c("#f39c12", "#e74c3c"))
+dcpal_grbu <- colorRampPalette(c("#18bc9c", 
+    "#3498db", "#2c3e50"))
+
+op <- par(las=2, mar=c(6,5,2,2), mfrow=c(2,2))
+barplot(1:length(dcpal_flatly), 
+    names=names(dcpal_flatly), 
+    border=dcpal_flatly$pre_border,
+    col=unlist(dcpal_flatly))
+barplot(1:10, col=dcpal_reds(10), main="Reds")
+barplot(1:10, col=dcpal_grbu(10), main="Green-Blue")
+barplot(1:10, col=dcpal_ogrd(10), main="Orange-Red")
+par(op)
 ```
 ![]({{ site.url }}/images/dc_pal_flatly.png)
 
